<resources>
    <string name="app_name">BestMobile</string>

    <string name="banner_ad_unit_id">ca-app-pub-4055542414750807/6856623373</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="play_pause">Play/Pause</string>
    <string name="artist">Artist</string>
    <string name="song">Song</string>
    <string name="playback">Playback</string>
    <string name="playlist">Playlists</string>
    <string name="map">Map</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="album">Album</string>
    <string name="title">Title</string>
    <string name="duration">Duration</string>
    <string name="all_songs_playlist_name">All songs</string>
    <string name="msg_playlist_exist">Playlist with this name already exist</string>
    <string name="dlg_create_playlist">Playlist title</string>
    <string name="dlg_rename_playlist">New playlist title</string>
    <string name="btn_create_playlist">Create</string>
    <string name="btn_rename_playlist">Rename</string>
    <string name="btn_cancel">Cancel</string>
    <string name="msg_confirm_delete_playlist">Do you want to remove playlist?</string>
    <string name="msg_confirm_delete_song">Do you want to remove song from playlist?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="playlists">Playlists</string>
    <string name="msg_select_songs">Please, select songs</string>
    <string name="msg_at_least_one_letter">Enter an least one letter</string>
    <string name="msg_at_least_one_song">Select at least one song</string>
    <string name="default_duration">00:00</string>
    <string name="msg_write_here">Write here...</string>
    <string name="btn_send_feedback">Submit</string>
    <string name="write_your_feedback">Write Your Feedback:</string>
    <string name="please_rate_us">Please Rate Us:</string>
    <string name="empty_string" />

    <string-array name="playlist_action_array">
        <item>Play</item>
        <item>Rename</item>
        <item>Remove</item>
    </string-array>

    <string-array name="song_action_array">
        <item>Play</item>
        <item>Remove</item>
    </string-array>

    <string-array name="play">
        <item>Play</item>
    </string-array>
</resources>
