<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_playback"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/playback" />
        <item
            android:id="@+id/nav_playlist"
            android:icon="@drawable/ic_playlists"
            android:title="@string/playlist" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_marker"
            android:title="@string/map" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@android:drawable/ic_menu_send"
                android:title="@string/feedback" />
        </menu>
    </item>

</menu>