<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nav_bar_header"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/default_song_picture"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artist"
        android:textSize="@dimen/header_text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song"
        android:textSize="@dimen/header_text_size" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="@dimen/header_playback_size"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/prev"
            android:src="@android:drawable/ic_media_previous" />


        <ImageButton
            android:layout_width="0dp"
            android:layout_height="@dimen/header_playback_size"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/play_pause"
            android:src="@android:drawable/ic_media_play" />


        <ImageButton
            android:layout_width="0dp"
            android:layout_height="@dimen/header_playback_size"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/next"
            android:src="@android:drawable/ic_media_next" />
    </LinearLayout>

</LinearLayout>
