<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/horizontical_margin_edit_text"
    android:layout_marginRight="@dimen/horizontical_margin_edit_text"
    android:layout_marginTop="@dimen/vertical_margin_edit_text"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontical_margin_edit_text"
            android:text="@string/please_rate_us"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="@dimen/text_size_title_feedback" />

        <RatingBar
            android:id="@+id/rating"
            style="@style/StarRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/vertical_margin_rating_bar"
            android:rating="3"
            android:soundEffectsEnabled="true" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontical_margin_edit_text"
            android:text="@string/write_your_feedback"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="@dimen/text_size_title_feedback" />


        <EditText
            android:id="@+id/feedback_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontical_margin_edit_text"
            android:layout_marginRight="@dimen/horizontical_margin_edit_text"
            android:layout_marginTop="@dimen/vertical_margin_edit_text"
            android:hint="@string/msg_write_here"
            android:textSize="@dimen/text_size_feedback" />

        <Button
            android:id="@+id/btn_send_feedback"
            android:layout_width="@dimen/btn_feedback_width"
            android:layout_height="@dimen/btn_feedback_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/btn_feedback_margin_bottom"
            android:layout_marginTop="@dimen/btn_feedback_margin_top"
            android:background="@drawable/black_button"
            android:text="@string/btn_send_feedback" />
    </LinearLayout>

</ScrollView>